src/objects/Query__c.object
<CustomObject>
    <fields>
        <fullName>AdReference__c</fullName>
        <formula>SalesInvoice__r.ffps_dmg__AdReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllocatedQueryAmount__c</fullName>
        <label>Allocated Query Amount</label>
        <summarizedField>QueryLineItem__c.QueryValue__c</summarizedField>
        <summaryForeignKey>QueryLineItem__c.Query__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApprovingCreditController__c</fullName>
        <label>Approving Credit Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ANy Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditApprovalLevel__c</fullName>
        <label>Credit Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditControllerApprovedDate__c</fullName>
        <label>Credit Controller Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditControllerApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Controller Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Client__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerReference__c</fullName>
        <formula>SalesInvoice__r.c2g__CustomerReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>SalesInvoice__r.c2g__OwnerCompany__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOpened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysToResolve__c</fullName>
        <formula>IF( ISBLANK( QueryCloseDate__c ) , NULL,  QueryCloseDate__c - QueryDate__c  )</formula>
        <label>Days to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <formula>IF(ISBLANK( QueryCloseDate__c ),TODAY()- QueryDate__c ,  DaysToResolve__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentCreditStatus__c</fullName>
        <formula>TEXT(SalesInvoice__r.ffps_dmg__DocumentCreditStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <formula>SalesInvoice__r.c2g__DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinanceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Account</label>
        <referenceTo>ffps_dmg__FinanceAccount__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceCurrency__c</fullName>
        <formula>TEXT(SalesInvoice__r.c2g__InvoiceCurrency__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <formula>SalesInvoice__r.c2g__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceExchangeRate__c</fullName>
        <formula>IF( TotalNetHomeValue__c &gt; 0, NetTotal__c /  TotalNetHomeValue__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <formula>SalesInvoice__r.c2g__InvoiceTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <formula>SalesInvoice__r.c2g__NetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderBillingNotes__c</fullName>
        <label>Order Billing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <formula>SalesInvoice__r.c2g__OutstandingValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>SalesInvoice__r.c2g__PaymentStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrepaidOrCredit__c</fullName>
        <formula>TEXT(SalesInvoice__r.ffps_dmgi__Prepaid_or_Credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid or Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryCloseDate__c</fullName>
        <label>Query Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QueryDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Query Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Adazzle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Did Not Appear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Not Authorised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advert Duplicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Balancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Policy Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Advert Charged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill - Non Rev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill - Rev Aff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Class/Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Insert Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Newsprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Number of Copies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Photo/Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Rate (National)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Style/Layout/Size/Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Overcharged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Reproduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOPID__c</fullName>
        <formula>FinanceAccount__r.ffps_dmgi__SOP_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP__c</fullName>
        <formula>TEXT(FinanceAccount__r.ffps_dmgi__SOP_Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesApprovalStatus__c</fullName>
        <formula>IF( ISBLANK( SalesApprover__c), &apos;&apos;, IF(  SterlingTotalQueryAmount__c &lt;=  CreditApprovalLevel__c ,&apos;Approved&apos;,&apos;INSUFFICIENT APPROVAL LIMIT&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Approver</label>
        <referenceTo>CreditApprover__c</referenceTo>
        <relationshipLabel>Queries (Sales Approver)</relationshipLabel>
        <relationshipName>Queries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesManagerEmail__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SalesManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>CreditApprover__c</referenceTo>
        <relationshipLabel>Queries (Sales Manager)</relationshipLabel>
        <relationshipName>Queries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPersonEmail__c</fullName>
        <label>Sales Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>CreditApprover__c</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesSectionEmail__c</fullName>
        <label>Sales Section Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SalesSection__c</fullName>
        <label>Sales Section</label>
        <picklist>
            <controllingField>BusinessUnit__c</controllingField>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester SSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order, Motors, Homes &amp; Gardens, Interiors &amp; Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility, Health, Career Mail, Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems &amp; Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Barry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Hendle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Stevens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send48HrEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by a background process to flag that a 48 Hour Email followup should be sent. This field is a trigger for an email to be sent via a workflow.</description>
        <inlineHelpText>Set by a background process to flag that a 48 Hour Email followup should be sent. This field is a trigger for an email to be sent via a workflow.</inlineHelpText>
        <label>Send 48hr Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>SalesInvoice__r.ffps_dmgi__Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Query</description>
        <inlineHelpText>Status of Query</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Approval Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Credit Controller Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SterlingTotalQueryAmount__c</fullName>
        <formula>IF (InvoiceExchangeRate__c &gt; 0, TotalQueryAmount__c /  InvoiceExchangeRate__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sterling Total Query Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxTotal__c</fullName>
        <formula>SalesInvoice__r.c2g__Tax1Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToBeAllocatedQueryAmount__c</fullName>
        <formula>TotalQueryAmount__c -  AllocatedQueryAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Be Allocated Query Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNetHomeValue__c</fullName>
        <formula>SalesInvoice__r.TotalNetHomeValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQueryAmount__c</fullName>
        <label>Total Query Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Query</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QueryDate__c</columns>
        <columns>Status__c</columns>
        <columns>Customer__c</columns>
        <columns>DueDate__c</columns>
        <columns>SalesInvoice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PendingCreditControllerApproval</fullName>
        <columns>NAME</columns>
        <columns>QueryDate__c</columns>
        <columns>Status__c</columns>
        <columns>Customer__c</columns>
        <columns>DueDate__c</columns>
        <columns>SalesInvoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Credit Controller Approval</value>
        </filters>
        <label>Pending Credit Controller Approval</label>
    </listViews>
    <nameField>
        <displayFormat>QRY{00000}</displayFormat>
        <label>Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CannotChangeSalesInvoice</fullName>
        <active>true</active>
        <description>Cannot change the Sales Invoice once it has been saved.</description>
        <errorConditionFormula>ISCHANGED( SalesInvoice__c )</errorConditionFormula>
        <errorDisplayField>SalesInvoice__c</errorDisplayField>
        <errorMessage>You cannot change the Sales Invoice once a record has been created. You must delete and create a new Query.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditControllerInsufficientAuthority</fullName>
        <active>true</active>
        <description>The Credit Controller approving the Query to be passed must have sufficient authority – Total Query Amount &lt;= Credit Approvers credit limit on his/her User record</description>
        <errorConditionFormula>AND( CreditControllerApproved__c , ISCHANGED (CreditControllerApproved__c),OR( SterlingTotalQueryAmount__c &gt; $User.CreditApprovalLimit__c, ISBLANK ($User.CreditApprovalLimit__c)))</errorConditionFormula>
        <errorMessage>You have insufficient authority to pass this Query</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomerContactRequiredForActiveQuery</fullName>
        <active>true</active>
        <description>A Customer Contact is required when a Query is anything other than Draft.</description>
        <errorConditionFormula>!ISPICKVAL(Status__c, &apos;Draft&apos;) &amp;&amp; ISBLANK(CustomerContact__c)</errorConditionFormula>
        <errorDisplayField>CustomerContact__c</errorDisplayField>
        <errorMessage>You must specify a Customer Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesApprovalStatusMustBeApproved</fullName>
        <active>true</active>
        <description>If the Status is Pending Credit Approval or Query Passed then the Sales Approval Status must be Approved</description>
        <errorConditionFormula>AND( NOT( SalesApprovalStatus__c  = &apos;Approved&apos;), OR( ISPICKVAL( Status__c, &apos;Pending Credit Controller Approval&apos;), ISPICKVAL( Status__c, &apos;Query Passed&apos;)))</errorConditionFormula>
        <errorDisplayField>SalesApprover__c</errorDisplayField>
        <errorMessage>If the Status is Pending Credit Controller Approval or Query Passed then the Sales Approval Status must be Approved – Sales Approver is blank or has insufficient authority</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ToBeAllocatedQueryAmountMustBeNil</fullName>
        <active>true</active>
        <description>If the Status is anything other than Open or Sales Approval Received then the To Be Allocated Query Amount must be nil</description>
        <errorConditionFormula>AND( ABS( ToBeAllocatedQueryAmount__c ) &gt;1, NOT(OR(ISPICKVAL(Status__c, &apos;Draft&apos;),ISPICKVAL(Status__c, &apos;Sales Approval Received&apos;))))</errorConditionFormula>
        <errorDisplayField>TotalQueryAmount__c</errorDisplayField>
        <errorMessage>If the Status is anything other than Open or Sales Approval Received then the To Be Allocated Query Amount must be nil</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TotalQueryAmountCannotExceedNetInvoice</fullName>
        <active>true</active>
        <description>The Total Query Amount cannot Exceed the Net Invoice Value.</description>
        <errorConditionFormula>TotalQueryAmount__c &gt;  NetTotal__c</errorConditionFormula>
        <errorDisplayField>TotalQueryAmount__c</errorDisplayField>
        <errorMessage>The Total Query Amount cannot exceed the Invoice Net total.</errorMessage>
    </validationRules>
</CustomObject>